<resources>
    <string name="app_name">Sallefy</string>

    <!-- MAIN/lOGIN ACTIVITY-->
    <string name="main_username">Username</string>
    <string name="main_password">Password</string>
    <string name="main_logIn_button">LogIn</string>
    <string name="main_register_button">Register</string>
    <string name="main_refresh_contraseña">No recuerdo la contraseña</string>

    <!-- REGISTER ACTIVITY-->
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_email">E-mail</string>
    <string name="register_register_button">Register</string>

    <!-- MENU BAR ACTIVITY-->
    <string name="menu_home">Explore</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Library</string>
    <string name="menu_account">Profile</string>

    <!-- OPTIONS ACTIVITY-->
    <string name="opciones_1">Follow una playlist</string>
    <string name="opciones_2">Reproducir una playlist</string>
    <string name="opciones_3">Añadir cancion a playlist</string>
    <string name="opciones_4">Like a una cancion</string>

    <!-- PLAYLIST ACTIVITY-->
    <string name="playlsit_name">Playlist name</string>
    <string name="action_canciones_playlisst">Canciones en una playlist</string>
    <string name="action_playlistId">Id de la playlist</string>
    <string name="action_namePlaylist">Nombre de la playlist</string>
    <string name="action_accept">Aceptar</string>

    <!-- SONG -->
    <string name="song_name">Título cancion</string>
    <string name="song_artists">Autor/a</string>
    <string name="song_duration">00:00</string>

    <!-- PLAYLIST -->
    <string name="playlist_name">Título playlist</string>
    <string name="playlist_artist">Autor/a</string>
    <string name="playlist_follows">Followers</string>
    <string name="playlist_likes">Likes</string>
    <string name="playlist_songs">Songs</string>
    <string name="add_song_playlist_name">Playlist name</string>

    <!-- ADD SONG -->
    <string name="add_song_title">Upload Song</string>
    <string name="add_song_id">Song Name</string>
    <string name="add_song_color">Color</string>
    <string name="add_song_duration">Song duration</string>
    <string name="add_song_select_track">Select Track</string>
    <string name="add_song_upload">Upload</string>
    <string name="add_song_choose">Select song</string>

    <!-- SEARCH -->
    <string name="search_Songs">Songs</string>
    <string name="search_Genres">Genres</string>
    <string name="search_Artists">Artists</string>
    <string name="search_Playlists">Playlists</string>

    <!-- Artist -->
    <string name="artist_name">Artist name</string>
    <string name="artist_follows">Followers</string>
    <string name="artist_playlists">Playlists</string>
    <string name="artist_songs">Songs</string>

    <!-- Fragments -->
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">User Profile</string>

    <!-- Genre -->
    <string name="genre_name">Genre name</string>
    <string name="genre_empty">Genre empty</string>

    <!-- Explore Fragment -->
    <string name="recentlyPlayed">Recently Played</string>
    <string name="recommend">Recommended for you</string>
    <string name="recommendArtists">Artists you may like</string>
    <string name="sharedTransition">Shared Element Transition</string>

    <!-- Library Fragment -->
    <string name="top_artist_songs">Popular songs</string>

    <!-- User Profile Fragment -->
    <string name="followButton">follow</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="userslist">Users list</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="media_route_menu_title">Chromecast</string>
    <string name="public_p">Public</string>
    <string name="follow_pl" />


</resources>
