<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        </LinearLayout>
            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/opciones_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/boton_borde_verde"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/opciones_1"
                    android:textColor="@color/colorBoton" />

                <Button
                    android:id="@+id/opciones_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/boton_borde_verde"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/opciones_2"
                    android:textColor="@color/colorBoton" />

                <Button
                    android:id="@+id/opciones_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/boton_borde_verde"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/opciones_3"
                    android:textColor="@color/colorBoton" />

                <Button
                    android:id="@+id/opciones_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/boton_borde_verde"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/opciones_4"
                    android:textColor="@color/colorBoton" />

        </LinearLayout>

</LinearLayout>