<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal|fill_vertical"
    android:orientation="vertical">

    <ImageView
        android:layout_width="329dp"
        android:layout_height="142dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="90dp"
        android:src="@drawable/sallefy_logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBoton"
                android:ems="10"
                android:fontFamily="@font/gotham_light"
                android:hint="@string/main_username"
                android:autofillHints=""
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/colorGrey" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorBoton"
                android:ems="10"
                android:fontFamily="@font/gotham_light"
                android:hint="@string/main_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/colorGrey" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorBoton"
                android:ems="10"
                android:fontFamily="@font/gotham_light"
                android:hint="@string/register_email"
                android:inputType="textWebEmailAddress"
                android:textAlignment="center"
                android:textColorHint="@color/colorGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26.5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_verde"
                android:fontFamily="@font/gotham_bold"
                android:text="@string/register_register_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>