<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_fondo"
    android:gravity="center_horizontal|fill_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_song_title"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">



        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/add_choose_song_thumbnail"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/logo">
            </ImageView>

            <Button
                android:id="@+id/add_choose_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/upload_song_border"
                android:padding="15dp"
                android:text="@string/add_song_choose"
                android:textColor="@color/colorWhite"/>

            <EditText
                android:id="@+id/add_song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorBoton"
                android:fontFamily="@font/gotham_light"
                android:hint="@string/add_song_id"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/colorGrey" />

            <EditText
                android:id="@+id/add_song_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorBoton"
                android:ems="10"
                android:fontFamily="@font/gotham_light"
                android:hint="@string/add_song_duration"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/colorGrey" />

            <Button
                android:id="@+id/add_song_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_borde_verde"
                android:padding="15dp"
                android:text="@string/add_song_upload"
                android:textColor="@color/colorWhite" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.jlmd.animatedcircleloadingview.AnimatedCircleLoadingView
        android:id="@+id/circle_loading_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mainColor="@color/colorBoton" />

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rotation="-3"
        android:scaleX="2"
        android:scaleY="-2.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>