<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/track_playlist_long_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/song_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/playlist_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="278dp"
            android:layout_height="64dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playlist_options"
            app:layout_constraintStart_toEndOf="@+id/playlist_img"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/playlist_title"
                style="@style/ItemTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/playlist_name"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/playlist_author"
                style="@style/SongArtistTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_artist" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/playlist_follows_img"
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_person_black_24dp"
                        android:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/playlist_follows"
                        style="@style/SongArtistTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/playlist_follows" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/playlist_songs_img"
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_audiotrack"
                        android:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/playlist_songs"
                        style="@style/SongArtistTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/playlist_songs" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/playlist_options"
            android:layout_width="29dp"
            android:layout_height="76dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>